5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4174/executions/1644_1054.log
== TEST (2019-04-09 17:13:59) 
-- CODE:
varx = float(input("x:"))
vary = float(input("y:"))

if ((2*varx) + (vary) = 3)
	print(ponto_pertence_a_reta)

else:
	print(ponto_nao_pertence_a_reta)
-- ERROR:
File "XXXX", line 4
    if ((2*varx) + (vary) = 3)
                          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 17:14:52) 
-- CODE:
varx = float(input("x:"))
vary = float(input("y:"))

if ((2*varx) + (vary) == 3)
	print(ponto_pertence_a_reta)

else:
	print(ponto_nao_pertence_a_reta)
-- ERROR:
File "XXXX", line 4
    if ((2*varx) + (vary) == 3)
                              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 17:14:56) 
-- CODE:
varx = float(input("x:"))
vary = float(input("y:"))

if ((2*varx) + (vary) = 3)
	print(ponto_pertence_a_reta)

else:
	print(ponto_nao_pertence_a_reta)
-- EXECUTION TIME:
0.184178
-- ERROR:
  File "/home/codebench/codes/1644/1054/main.py", line 4
    if ((2*varx) + (vary) = 3)
                          ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 17:14:57) 
-- CODE:
varx = float(input("x:"))
vary = float(input("y:"))

if ((2*varx) + (vary) = 3)
	print(ponto_pertence_a_reta)

else:
	print(ponto_nao_pertence_a_reta)
-- EXECUTION TIME:
0.155678
-- ERROR:
  File "/home/codebench/codes/1644/1054/main.py", line 4
    if ((2*varx) + (vary) = 3)
                          ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 17:14:58) 
-- CODE:
varx = float(input("x:"))
vary = float(input("y:"))

if ((2*varx) + (vary) = 3)
	print(ponto_pertence_a_reta)

else:
	print(ponto_nao_pertence_a_reta)
-- ERROR:
File "XXXX", line 4
    if ((2*varx) + (vary) = 3)
                          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 17:16:07) 
-- CODE:
varx = float(input("x:"))
vary = float(input("y:"))

if ((2*varx) + (vary) = 3)
	print('ponto_pertence_a_reta')

else:
	print('ponto_nao_pertence_a_reta')
-- ERROR:
File "XXXX", line 4
    if ((2*varx) + (vary) = 3)
                          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 17:16:29) 
-- CODE:
varx = float(input("x:"))
vary = float(input("y:"))

if ((2*varx) + (vary) = 3):
	print('ponto_pertence_a_reta')

else:
	print('ponto_nao_pertence_a_reta')
-- ERROR:
File "XXXX", line 4
    if ((2*varx) + (vary) = 3):
                          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 17:16:45) 
-- CODE:
varx = float(input("x:"))
vary = float(input("y:"))

if ((2*varx) + (vary) = 3):
	print('ponto_pertence_a_reta')
else:
	print('ponto_nao_pertence_a_reta')
-- ERROR:
File "XXXX", line 4
    if ((2*varx) + (vary) = 3):
                          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 17:17:08) 
-- CODE:
varx = float(input("x:"))
vary = float(input("y:"))

if ((2*varx) + (vary) == 3):
	print('ponto_pertence_a_reta')
else:
	print('ponto_nao_pertence_a_reta')
-- OUTPUT:
ponto_pertence_a_reta
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 17:17:27) 
-- CODE:
varx = float(input("x:"))
vary = float(input("y:"))

if ((2*varx) + (vary) == 3):
	print('ponto_pertence_a_reta')
else:
	print('ponto_nao_pertence_a_reta')
-- EXECUTION TIME:
0.172989
-- TEST CASE 1:
---- input:
20
-37
---- correct output:
ponto pertence a reta
---- user output:
ponto_pertence_a_reta
-- TEST CASE 2:
---- input:
5
13
---- correct output:
ponto nao pertence a reta
---- user output:
ponto_nao_pertence_a_reta
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 17:17:42) 
-- CODE:
varx = float(input("x:"))
vary = float(input("y:"))

if ((2*varx) + (vary) == 3):
	print('ponto_pertence_a_reta')
else:
	print('ponto_nao_pertence_a_reta')
-- EXECUTION TIME:
0.140022
-- TEST CASE 1:
---- input:
20
-37
---- correct output:
ponto pertence a reta
---- user output:
ponto_pertence_a_reta
-- TEST CASE 2:
---- input:
5
13
---- correct output:
ponto nao pertence a reta
---- user output:
ponto_nao_pertence_a_reta
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 17:17:43) 
-- CODE:
varx = float(input("x:"))
vary = float(input("y:"))

if ((2*varx) + (vary) == 3):
	print('ponto_pertence_a_reta')
else:
	print('ponto_nao_pertence_a_reta')
-- EXECUTION TIME:
0.200188
-- TEST CASE 1:
---- input:
20
-37
---- correct output:
ponto pertence a reta
---- user output:
ponto_pertence_a_reta
-- TEST CASE 2:
---- input:
5
13
---- correct output:
ponto nao pertence a reta
---- user output:
ponto_nao_pertence_a_reta
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 17:17:43) 
-- CODE:
varx = float(input("x:"))
vary = float(input("y:"))

if ((2*varx) + (vary) == 3):
	print('ponto_pertence_a_reta')
else:
	print('ponto_nao_pertence_a_reta')
-- OUTPUT:
ponto_pertence_a_reta
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 17:17:45) 
-- CODE:
varx = float(input("x:"))
vary = float(input("y:"))

if ((2*varx) + (vary) == 3):
	print('ponto_pertence_a_reta')
else:
	print('ponto_nao_pertence_a_reta')
-- EXECUTION TIME:
0.202307
-- TEST CASE 1:
---- input:
20
-37
---- correct output:
ponto pertence a reta
---- user output:
ponto_pertence_a_reta
-- TEST CASE 2:
---- input:
5
13
---- correct output:
ponto nao pertence a reta
---- user output:
ponto_pertence_a_reta
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 17:17:45) 
-- CODE:
varx = float(input("x:"))
vary = float(input("y:"))

if ((2*varx) + (vary) == 3):
	print('ponto_pertence_a_reta')
else:
	print('ponto_nao_pertence_a_reta')
-- EXECUTION TIME:
0.148241
-- TEST CASE 1:
---- input:
20
-37
---- correct output:
ponto pertence a reta
---- user output:
ponto_pertence_a_reta
-- TEST CASE 2:
---- input:
5
13
---- correct output:
ponto nao pertence a reta
---- user output:
ponto_pertence_a_reta
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 17:17:45) 
-- CODE:
varx = float(input("x:"))
vary = float(input("y:"))

if ((2*varx) + (vary) == 3):
	print('ponto_pertence_a_reta')
else:
	print('ponto_nao_pertence_a_reta')
-- EXECUTION TIME:
0.119563
-- TEST CASE 1:
---- input:
20
-37
---- correct output:
ponto pertence a reta
---- user output:
ponto_pertence_a_reta
-- TEST CASE 2:
---- input:
5
13
---- correct output:
ponto nao pertence a reta
---- user output:
ponto_pertence_a_reta
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 17:17:45) 
-- CODE:
varx = float(input("x:"))
vary = float(input("y:"))

if ((2*varx) + (vary) == 3):
	print('ponto_pertence_a_reta')
else:
	print('ponto_nao_pertence_a_reta')
-- EXECUTION TIME:
0.153072
-- TEST CASE 1:
---- input:
20
-37
---- correct output:
ponto pertence a reta
---- user output:
ponto_pertence_a_reta
-- TEST CASE 2:
---- input:
5
13
---- correct output:
ponto nao pertence a reta
---- user output:
ponto_nao_pertence_a_reta
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 17:17:45) 
-- CODE:
varx = float(input("x:"))
vary = float(input("y:"))

if ((2*varx) + (vary) == 3):
	print('ponto_pertence_a_reta')
else:
	print('ponto_nao_pertence_a_reta')
-- EXECUTION TIME:
0.140966
-- TEST CASE 1:
---- input:
20
-37
---- correct output:
ponto pertence a reta
---- user output:
ponto_nao_pertence_a_reta
-- TEST CASE 2:
---- input:
5
13
---- correct output:
ponto nao pertence a reta
---- user output:
ponto_nao_pertence_a_reta
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 17:18:05) 
-- CODE:
varx = float(input("x:"))
vary = float(input("y:"))

if ((2*varx) + vary == 3):
	print('ponto_pertence_a_reta')
else:
	print('ponto_nao_pertence_a_reta')
-- EXECUTION TIME:
0.173556
-- TEST CASE 1:
---- input:
20
-37
---- correct output:
ponto pertence a reta
---- user output:
ponto_pertence_a_reta
-- TEST CASE 2:
---- input:
5
13
---- correct output:
ponto nao pertence a reta
---- user output:
ponto_nao_pertence_a_reta
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 17:18:29) 
-- CODE:
varx = float(input("x:"))
vary = float(input("y:"))

if ((2*varx) + vary == 3):
	print('ponto pertence a reta')
else:
	print('ponto nao pertence a reta')
-- EXECUTION TIME:
0.133485
-- TEST CASE 1:
---- input:
20
-37
---- correct output:
ponto pertence a reta
---- user output:
ponto pertence a reta
-- TEST CASE 2:
---- input:
5
13
---- correct output:
ponto nao pertence a reta
---- user output:
ponto nao pertence a reta
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
